<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.monolito.auxo</groupId>
	<artifactId>auxo</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>auxo</name>
	<properties>
		<errai.dev.context>auxo</errai.dev.context>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.gwt.plugin.version>2.5.1</maven.gwt.plugin.version>
		<maven.resources.plugin.version>2.6</maven.resources.plugin.version>
		<maven.clean.plugin.version>2.4.1</maven.clean.plugin.version>
		<maven.war.plugin.version>2.1.1</maven.war.plugin.version>
		<org.jboss.errai.version>3.0.1.Final</org.jboss.errai.version>
		<jboss-as-maven-plugin.version>7.4.Final</jboss-as-maven-plugin.version>
		<picketlink.version>2.6.0.Final</picketlink.version>
		<org.hibernate.version>4.3.1.Final</org.hibernate.version>
		<org.hibernate.ogm.version>4.1.0.Beta6</org.hibernate.ogm.version>
		<org.hibernate.search.version>4.2.0.Final</org.hibernate.search.version>
		<org.jboss.arquillian.version>1.1.3.Final</org.jboss.arquillian.version>
		<org.jboss.wildfly.version>8.0.0.Final</org.jboss.wildfly.version>
		<maven.deploy.plugin.version>2.7</maven.deploy.plugin.version>
		<jboss.home>/opt/wildfly</jboss.home>
		<errai.jboss.home>/opt/wildfly</errai.jboss.home>
	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- <dependency> <groupId>org.jboss.errai.bom</groupId> <artifactId>errai-version-master</artifactId> 
				<version>${project.version}</version> <type>pom</type> <scope>import</scope> 
				</dependency> -->
			<dependency>
				<groupId>org.jboss.errai</groupId>
				<artifactId>errai-parent</artifactId>
				<version>${org.jboss.errai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.errai.bom</groupId>
				<artifactId>errai-bom</artifactId>
				<version>${org.jboss.errai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-tools</artifactId>
		</dependency>
		<!-- XXX should we get this for free with errai-javaee-all? -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
		</dependency>

		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-cdi-jboss</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jboss-as-support</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-bus</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-ioc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-cdi-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-weld-integration</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-ui</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-data-binding</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-navigation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jaxrs-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jaxrs-provider</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jpa-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-jpa-datasync</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-security-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-security-client</artifactId>
		</dependency>
		<!-- <dependency>
			<groupId>org.picketlink</groupId>
			<artifactId>picketlink-api</artifactId>
			<version>${picketlink.version}</version>
			<scope>compile</scope>
		</dependency> -->
		<!-- <dependency>
			<groupId>org.picketlink</groupId>
			<artifactId>picketlink-impl</artifactId>
			<version>${picketlink.version}</version>
		</dependency> -->
		<!-- <dependency>
			<groupId>org.picketlink</groupId>
			<artifactId>picketlink-idm-simple-schema</artifactId>
			<version>${picketlink.version}</version>
		</dependency> -->
		<dependency>
			<groupId>org.jboss.spec.javax.servlet</groupId>
			<artifactId>jboss-servlet-api_3.0_spec</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.spec.javax.ejb</groupId>
			<artifactId>jboss-ejb-api_3.1_spec</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.4.24.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<classifier>sources</classifier>
		</dependency>
	  <dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${org.hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.ogm</groupId>
			<artifactId>hibernate-ogm-infinispan</artifactId>
			<version>${org.hibernate.ogm.version}</version>
			<scope>runtime</scope>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
		<resources>
			<resource>
				<directory>src/main/java</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven.war.plugin.version}</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
					<packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven.clean.plugin.version}</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}</directory>
							<includes>
								<include>www-test/**</include>
								<include>.gwt/**</include>
								<include>.errai/**</include>
								<include>src/main/webapp/WEB-INF/deploy/**</include>
								<include>src/main/webapp/WEB-INF/classes/**</include>
								<include>src/main/webapp/WEB-INF/lib/**</include>
								<include>src/main/webapp/TodoList/**</include>
								<include>**/gwt-unitCache/**</include>
								<include>**/*.JUnit/**</include>
								<include>monitordb.*</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven.resources.plugin.version}</version>
				<executions>
					<execution>
						<id>css-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<inherited>false</inherited>
						<configuration>
							<resources>
								<resource>
									<directory>src/main/java/com/monolito/auxo/client/local/css</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
							<outputDirectory>src/main/webapp/css</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin> <groupId>org.jboss.as.plugins</groupId> <artifactId>jboss-as-maven-plugin</artifactId> 
				<version>${jboss-as-maven-plugin.version}</version> <configuration> <filename>${project.artifactId}.${project.packaging}</filename> 
				</configuration> </plugin> -->
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.wildfly.plugins</groupId>
				<artifactId>wildfly-maven-plugin</artifactId>
				<version>1.0.2.Final</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.5.1</version>
				<executions>
					<execution>
						<id>resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>resources</goal>
						</goals>
					</execution>
					<execution>
						<id>compile</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<strict>false</strict>
					<logLevel>INFO</logLevel>
					<noServer>true</noServer>
					<server>org.jboss.errai.cdi.server.gwt.JBossLauncher</server>
					<runTarget>${errai.dev.context}/index.html</runTarget>
					<extraJvmArgs>-Xmx712m -XX:CompileThreshold=7000 -XX:MaxPermSize=128M -Derrai.jboss.config.file=standalone.xml -Derrai.jboss.home=${errai.jboss.home} -Derrai.dev.context=${errai.dev.context} -Derrai.jboss.javaagent.path=${settings.localRepository}/org/jboss/errai/errai-client-local-class-hider/${project.version}/errai-client-local-class-hider-${project.version}.jar</extraJvmArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>http://central.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>http://central.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<profiles>
		<profile>
			<id>wildfly-managed</id>
			<dependencies>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-arquillian-container-managed</artifactId>
					<version>${org.jboss.wildfly.version}</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
			<!--<activation> <activeByDefault>true</activeByDefault> </activation> -->
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-dependency-plugin</artifactId>
						<executions>
							<execution>
								<id>unpack</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>unpack</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.wildfly</groupId>
											<artifactId>wildfly-dist</artifactId>
											<version>${org.jboss.wildfly.version}</version>
											<type>zip</type>
											<overWrite>false</overWrite>
											<outputDirectory>${project.build.directory}</outputDirectory>
										</artifactItem>
										<!--<artifactItem> <groupId>org.hibernate.ogm</groupId> <artifactId>hibernate-ogm-modules-wildfly8</artifactId> 
											<version>${org.hibernate.ogm.version}</version> <type>zip</type> <overWrite>false</overWrite> 
											<outputDirectory>${jboss.home}/modules</outputDirectory> </artifactItem> -->
									</artifactItems>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<!--<profile> <id>jboss7</id> <build> <plugins> <plugin> <groupId>org.wildfly.plugins</groupId> 
			<artifactId>wildfly-maven-plugin</artifactId> <version>1.0.2.Final</version> 
			<extensions>false</extensions> </plugin> <plugin> <artifactId>maven-war-plugin</artifactId> 
			<version>2.2</version> <configuration> <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes> 
			<outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping> 
			</configuration> </plugin> </plugins> </build> <dependencies> <dependency> 
			<groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> 
			<version>${org.hibernate.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>org.hibernate.ogm</groupId> <artifactId>hibernate-ogm-core</artifactId> 
			<version>${org.hibernate.ogm.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>org.hibernate.ogm</groupId> <artifactId>hibernate-ogm-infinispan</artifactId> 
			<version>${org.hibernate.ogm.version}</version> <scope>provided</scope> </dependency> 
			<dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search</artifactId> 
			<version>${org.hibernate.search.version}</version> <scope>provided</scope> 
			</dependency> <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search-infinispan</artifactId> 
			<version>${org.hibernate.search.version}</version> <scope>provided</scope> 
			</dependency> <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search-engine</artifactId> 
			<version>${org.hibernate.search.version}</version> <scope>provided</scope> 
			</dependency> <dependency> <groupId>org.hibernate.hql</groupId> <artifactId>hibernate-hql-parser</artifactId> 
			<version>1.0.0.CR1</version> <scope>provided</scope> </dependency> <dependency> 
			<groupId>org.hibernate.hql</groupId> <artifactId>hibernate-hql-lucene</artifactId> 
			<version>1.0.0.CR1</version> <scope>provided</scope> </dependency> <dependency> 
			<groupId>org.jboss.errai</groupId> <artifactId>errai-data-binding</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.jboss.weld.servlet</groupId> 
			<artifactId>weld-servlet-core</artifactId> <scope>provided</scope> </dependency> 
			<dependency> <groupId>org.jboss.errai</groupId> <artifactId>errai-navigation</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>javax.inject</groupId> 
			<artifactId>javax.inject</artifactId> <scope>provided</scope> </dependency> 
			<dependency> <groupId>org.jboss.resteasy</groupId> <artifactId>jaxrs-api</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.jboss.errai</groupId> 
			<artifactId>errai-cdi-jboss</artifactId> <scope>provided</scope> </dependency> 
			<dependency> <groupId>hsqldb</groupId> <artifactId>hsqldb</artifactId> <scope>provided</scope> 
			</dependency> <dependency> <groupId>org.jboss.errai</groupId> <artifactId>errai-security-client</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.hibernate</groupId> 
			<artifactId>hibernate-validator</artifactId> <classifier>sources</classifier> 
			<scope>provided</scope> </dependency> <dependency> <groupId>javax.annotation</groupId> 
			<artifactId>jsr250-api</artifactId> <scope>provided</scope> </dependency> 
			<dependency> <groupId>org.jboss.spec.javax.interceptor</groupId> <artifactId>jboss-interceptors-api_1.1_spec</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>junit</groupId> 
			<artifactId>junit</artifactId> <version>4.11</version> <scope>provided</scope> 
			</dependency> <dependency> <groupId>org.jboss.errai</groupId> <artifactId>errai-jaxrs-client</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.jboss.errai</groupId> 
			<artifactId>errai-ui</artifactId> <scope>provided</scope> </dependency> <dependency> 
			<groupId>io.netty</groupId> <artifactId>netty-codec-http</artifactId> <scope>provided</scope> 
			</dependency> <dependency> <groupId>javax.validation</groupId> <artifactId>validation-api</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.jboss.errai</groupId> 
			<artifactId>errai-tools</artifactId> <scope>provided</scope> </dependency> 
			<dependency> <groupId>de.benediktmeurer.gwt-slf4j</groupId> <artifactId>gwt-slf4j</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>javax.enterprise</groupId> 
			<artifactId>cdi-api</artifactId> <scope>provided</scope> </dependency> <dependency> 
			<groupId>org.jboss.errai</groupId> <artifactId>errai-codegen-gwt</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.hibernate</groupId> 
			<artifactId>hibernate-entitymanager</artifactId> <version>${org.hibernate.version}</version> 
			<scope>provided</scope> </dependency> <dependency> <groupId>com.google.guava</groupId> 
			<artifactId>guava-gwt</artifactId> <scope>provided</scope> </dependency> 
			<dependency> <groupId>org.jboss.errai</groupId> <artifactId>errai-javax-enterprise</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.jboss.logging</groupId> 
			<artifactId>jboss-logging</artifactId> <scope>provided</scope> </dependency> 
			<dependency> <groupId>xml-apis</groupId> <artifactId>xml-apis</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.jboss.spec.javax.transaction</groupId> 
			<artifactId>jboss-transaction-api_1.1_spec</artifactId> <scope>provided</scope> 
			</dependency> <dependency> <groupId>org.hibernate.javax.persistence</groupId> 
			<artifactId>hibernate-jpa-2.0-api</artifactId> <scope>provided</scope> </dependency> 
			<dependency> <groupId>org.jboss.errai</groupId> <artifactId>errai-jpa-client</artifactId> 
			<scope>provided</scope> </dependency> <dependency> <groupId>org.hibernate.common</groupId> 
			<artifactId>hibernate-commons-annotations</artifactId> <version>4.0.5.Final</version> 
			<scope>provided</scope> </dependency> <dependency> <artifactId>resteasy-cdi</artifactId> 
			<groupId>org.jboss.resteasy</groupId> <scope>provided</scope> </dependency> 
			</dependencies> </profile> -->
	</profiles>
</project>
